src/template/snapshots/cosmic_ext_applet_sysinfo__template__test__minimal.snap
---
source: src/template/mod.rs
expression: "parse(\"{cpu_usage} {ram_usage}\")"
---
Template {
    segments: [
        Variable(
            CpuUsage,
        ),
        Literal(
            " ",
        ),
        Variable(
            RamUsage,
        ),
    ],
    requires: {
        "cpu_usage",
        "ram_usage",
    },
}
