src/template/snapshots/cosmic_ext_applet_sysinfo__template__test__network focused.snap
---
source: src/template/mod.rs
expression: "parse(\"↓{dl_speed}M/s ↑{ul_speed}M/s | CPU {cpu_usage}\")"
---
Template {
    segments: [
        Literal(
            "↓",
        ),
        Variable(
            DlSpeed,
        ),
        Literal(
            "M/s ↑",
        ),
        Variable(
            UlSpeed,
        ),
        Literal(
            "M/s | CPU ",
        ),
        Variable(
            CpuUsage,
        ),
    ],
    requires: {
        "cpu_usage",
        "dl_speed",
        "ul_speed",
    },
}
