src/template/snapshots/cosmic_ext_applet_sysinfo__template__test__parse.snap
---
source: src/template.rs
expression: "parse(\"{gpu_temp} {gpu_usage} | {cpu_temp} {cpu_usage} | {ram_usage} | ↓{dl_speed} ↑{ul_speed}\",)"
---
Template {
    segments: [
        Variable(
            GpuTemp,
        ),
        Literal(
            " ",
        ),
        Variable(
            GpuUsage,
        ),
        Literal(
            " | ",
        ),
        Variable(
            CpuTemp,
        ),
        Literal(
            " ",
        ),
        Variable(
            CpuUsage,
        ),
        Literal(
            " | ",
        ),
        Variable(
            RamUsage,
        ),
        Literal(
            " | ↓",
        ),
        Variable(
            DlSpeed,
        ),
        Literal(
            " ↑",
        ),
        Variable(
            UlSpeed,
        ),
    ],
    requires: Requires {
        cpu_temp: true,
        gpu_temp: true,
        gpu_usage: true,
    },
}
