src/template/snapshots/cosmic_ext_applet_sysinfo__template__test__temps only.snap
---
source: src/template/mod.rs
expression: "parse(\"CPU {cpu_temp} GPU {gpu_temp}\")"
---
Template {
    segments: [
        Literal(
            "CPU ",
        ),
        Variable(
            CpuTemp,
        ),
        Literal(
            " GPU ",
        ),
        Variable(
            GpuTemp,
        ),
    ],
    requires: {
        "cpu_temp",
        "gpu_temp",
    },
}
